--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-phone-input-2": "^2.15.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.8"
