--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "gsap": "^3.13.0",
     "react": "^18.2.0",
+    "react-collapsed": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
